[gd_scene load_steps=2 format=3 uid="uid://cddet80t2t6tc"]

[ext_resource type="Script" uid="uid://dvmvyd2384yk" path="res://Games/Template/ui/pause_menu.gd" id="1_a34tl"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a34tl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "PAUSE"

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
